--- a/index.html
+++ b/index.html
@@ -55,10 +55,21 @@
                 <div class="work_boxz work_box0">
                     <ul>
                         <li>
+                            <h4>2019</h4></li>
+                        <li>
+                            <h4><b>iOS Developer (JoBest App)</b></h4></li>
+                        <li>Idea of the application is to act as a bridge between job seekers and employers </li>
+                        <li class="green_color">
+                            <h4>King Saud University</h4></li>
+                    </ul>
+                </div>
+                <div class="work_boxz work_box2">
+                    <ul>
+                        <li>
                             <h4>2018</h4></li>
                         <li>
                             <h4><b>Project Manger</b></h4></li>
-                        <li>Internship in Thiqah business Services Company for two months </li>
+                        <li>Internship in Thiqah business Services Company for two months</li>
                         <li class="green_color">
                             <h4>Thiqah business Services Company</h4></li>
                     </ul>
@@ -99,7 +110,7 @@
                 <div class="work_boxy worky_box1">
                     <ul>
                         <li class="timeline_date">
-                            <h4>Expected May 2019</h4></li>
+                            <h4>May 2019</h4></li>
                         <li>
                             <h4><b>Bachelor of Science in Software Engineering</b></h4>
                         </li>
@@ -128,7 +139,14 @@ Riyadh, Saudi Arabia
                 </li>
             </ul>
             <div class="timeline3">
-                <div class="work_boxx workx_box2">
+            <div class="work_boxx workx_box2">
+                    <ul>
+                        <li class="timeline_date">
+                            <h4><b>participation in Undergraduate Research Conference certificate - 2019</b></h4></li>
+                        <li>This conference is promoting undergraduate research activity at educational institutions in the Arab countries</li>
+                    </ul>
+                </div>
+                <div class="work_boxx workx_box5">
                     <ul>
                         <li>
                             <h4><b>Cyber Hacker Certified (CHC) certificate - 2017</b></h4></li>
@@ -137,6 +155,7 @@ Riyadh, Saudi Arabia
                          the definition of Linux</li>
                     </ul>
                 </div>
+                
             </div>
         </div>
   
@@ -188,7 +207,7 @@ Riyadh, Saudi Arabia
                                               
                           <li class="text-center col-xs-3">
                     <img src="images/java.png">
-                    <h4>Programming in Java/php/JavaScript/HTML/CSS</h4>
+                    <h4>Programming in Java/php/JavaScript/HTML/CSS/Swift</h4>
                 </li>
                   <li class="text-center col-xs-3">
                     <img src="images/php.png">
