--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Riyadh, Saudi Arabia
                                               
                           <li class="text-center col-xs-3">
                     <img src="images/java.png">
-                    <h4>Programming in Java/php</br>/C/JavaScript/HTML/CSS/Swift</h4>
+                    <h4>Programming in Java/php/</br>C/JavaScript/</br>HTML/CSS/Swift</h4>
                 </li>
                   <li class="text-center col-xs-3">
                     <img src="images/php.png">
