--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
         <div class="col-xs-12 col-sm-7 col-sm-push-5 section1">
-            <img src="images/hes.png" alt="cv image">
+            <img src="images/Artboard 1K.png" alt="cv image">
             <div>
                 <h1>Hissah Alsultan</h1>
             </div>
