--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <label>EDUCATION</label>
                 </li>
             </ul>
-          
+            <div class="timeline2">
                 <div class="work_boxy worky_box1">
                     <ul>
                        
