--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
                 </li>
             </ul>
             <div class="timeline1">
+                 <div class="work_boxz work_box0">
+                    <ul>
+                        <li>
+                            <h4>2020</h4></li>
+                        <li>
+                            <h4><b>Networking Consulting Engineer</b></h4></li>
+                        <li>Internship at Cisco System Inc.</li>
+                        <li>For nine months</li>
+                        <li class="green_color">
+                            <h4>Cisco System Inc.</h4></li>
+                    </ul>
+                </div>
                 <div class="work_boxz work_box0">
                     <ul>
                         <li>
