--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                             <h4>2018</h4></li>
                         <li>
                             <h4><b>Project Manger</b></h4></li>
-                        <li>Internship in Thiqah business Services Company for two months</li>
+                        <li>Internship in Thiqah business Services Company </li>
+                        <li>For two months</li>
                         <li class="green_color">
                             <h4>Thiqah business Services Company</h4></li>
                     </ul>
