--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@ Riyadh, Saudi Arabia
                 </li>
             </ul>
             <div class="timeline3">
+                 <div class="work_boxx workx_box2">
+                    <ul>
+                        <li class="timeline_date">
+                            <h4><b>Cisco Certified Network Associate (CCNA)- 2020</b></h4></li>
+                        <li>This conference is promoting undergraduate research activity at educational institutions in the Arab countries</li>
+                    </ul>
+                </div>
             <div class="work_boxx workx_box2">
                     <ul>
                         <li class="timeline_date">
