--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@ Riyadh, Saudi Arabia
                     <ul>
                         <li class="timeline_date">
                             <h4><b>Cisco Certified Network Associate (CCNA)- 2020</b></h4></li>
-                        <li>This conference is promoting undergraduate research activity at educational institutions in the Arab countries</li>
+                        <li>The CCNA certification validates skills and knowledge in network fundamentals, network access,
+                            IP connectivity, IP services, security fundamentals, and automation and programmability.</li>
                     </ul>
                 </div>
             <div class="work_boxx workx_box2">
